--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,79 @@
 /*  your css code here. If applicable */
+* {
+	margin: 0;
+	padding: 0;
+	box-sizing: border-box;
+}
+
+body {
+	background-color: #f5f5f5;
+	padding: 10px;
+	margin: 10px;
+	font-family: Intern;
+}
+
+
+.header {
+	width: 100%;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	height: 80px;
+	text-align: center;
+	background-color: #011e29;
+	color: white;
+}
+
+.main {
+	display: flex;
+	margin: 0 20px;	
+}
+.latest-news-section {
+	width: 300px;
+	background-color: white;
+	padding: 20px;
+	margin: 0 20px;
+	border-radius: 12px;
+}
+
+ul {
+	margin: 10px 20px
+
+}
+
+.pictorial-news-section {
+	width: 250px;
+	background-color: white;
+	padding: 12px;
+	margin: 0 12px;
+	border-radius: 10px;
+}
+
+.pictorial-news-section h3 {
+	margin-bottom: 12px;
+	text-align:center;
+}
+
+.pictorial-news-section img{
+	width: 150px;
+	border-radius: 8px
+	
+}
+.main-Content {
+	width: 600px;
+	background-color: white;
+	padding: 12px;
+	margin: 0 12px;
+	border-radius: 10px;
+	text-align: center;
+}
+
+.main-Content h2 {
+	font-size: 25px;
+	margin: 20px;
+}
+
+.main-Content p {
+	text-orientation:justify;
+	text-align: justify;
+}
